# xshade-typecheck

./: Cargo.toml
src/: lib.rs
src/type_system/: mod.rs
src/typed_ast/: mod.rs
src/typed_ast/expressions/: mod.rs
tests/: tests.rs  typetests.xs
